app/assets/stylesheets/components/common/_breadcrumb.scss
// Site wide breadcrumbs
//
// Styleguide Breadcrumbs

.breadcrumbs__item {
  @include body(14, 18);
  display: inline;
  margin-bottom: 0;

  @include respond-to($mq-l) {
    @include body(16, 24);
  }
}

.breadcrumbs__divider:before {
  @extend %font-body;
  font-size: 32px;
  line-height: 0;
  color: $breadcrumbs-divider-color;
  position: relative;
  top: 4px;
  padding: 0 6px;
  content: '\00203A';
}

